[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext_china_coa"
version = "0.0.1"
authors = [
  { name="Gemini", email="no-reply@google.com" },
]
description = "Chart of Accounts for China for ERPNext"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zhaocjiang/erpnext_china_coa"
